cluster/k8s/longhorn/longhorn-disk-config-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: longhorn-disk-config
spec:
  rules:
    - name: hetzner-longhorn-disk
      match:
        any:
          - resources:
              kinds:
                - Node
              selector:
                matchLabels:
                  topology.kubernetes.io/region: hetzner
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              node.longhorn.io/default-disks-config: >-
                [{"path":"/var/lib/longhorn","allowScheduling":true,"tags":["hetzner-ephemeral"]}]
              node.longhorn.io/default-node-tags: >-
                ["hetzner"]
